src/App.global.css
/*
 * @NOTE: Prepend a `~` to css file paths that are in your node_modules
 *        See https://github.com/webpack-contrib/sass-loader#imports
 */
body {
  position: relative;
  color: white;
  height: 100vh;
  font-family: sans-serif;
  overflow-y: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav {
  margin-top: 15rem;
}

.nav-link:hover {
  background-color: #e1effc;
  border-radius: 4px;
  transition: all 0.2s ease-out;
}

svg {
  cursor: pointer;
}

.header-container {
  color: black;
}

.right-arrow {
  float: right;
}

.btn-col {
  display: flex;
  float: right;
}

.right-btn-group {
  float: right;
}

.header-btn {
  font-size: 14px;
  height: 36px;
}

button {
  background-color: white;
  padding: 10px 20px;
  margin: 10px;
  border-radius: 10px;
  border: none;
  appearance: none;
  font-size: 1.3rem;
  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
  transition: transform ease-in 0.1s;
}

button:hover {
  transform: scale(1.05);
}

li {
  list-style: none;
}

a {
  text-decoration: none;
}

a:hover {
  opacity: 1;
  text-decoration: none;
  cursor: pointer;
}

.board-container {
  padding: 50px;
  margin-bottom: 13rem;
}

.lane {
  display: inline-block;
}

.card-container {
  width: 255px;
  padding: 5px;
  margin: 15px;
  background-color: #e1effc;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.24);
  overflow-y: scroll;
  height: 400px;
  color: black;
}

.card {
  margin: 5px;
  /* border: 1px solid #ccc; */
  background-color: white;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.24);
  padding: 10px;
}

.card-column-header {
  font-size: 18px;
}

.column-drag-handle {
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.Modal {
  color: black;
}

.calendar-wraper {
  position: relative;
  width: 120px;
}

.calendar-input-wraper {
  display: inline-block;
  width: 100%;
  position: relative;
  z-index: 10;
  cursor: pointer;
}

.calendar-input {
  border: none;
  background: transparent;
  width: 100%;
  padding: 10px;
  outline: none;
}

.calendar-input::-webkit-calendar-picker-indicator {
  right: -10px;
  position: absolute;
  width: 78px;
  height: 40px;
  color: rgba(204, 204, 204, 0);
  opacity: 0;
  cursor: pointer;
}

.calendar-input::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

.calendar-input::-webkit-clear-button {
  margin-right: 75px;
}

.tagInputField {
  height: 50px;
}

.calendar-icon {
  height: 100%;
  box-sizing: unset;
  border: none;
  position: absolute;
  right: 0;
  top: 0;
}

.tagInput {
  outline: none;
  border-width: 0px;
  color: #495057;
}

.react-tagsinput-tag {
  background-color: #e1effc;
  border-radius: 2px;
  border: 1px solid #e1effc;
  color: black;
  display: inline-block;
  font-family: sans-serif;
  font-size: 13px;
  font-weight: 400;
  margin-bottom: 5px;
  margin-right: 5px;
  padding: 5px;
}

.react-tagsinput-remove {
  cursor: pointer;
  background-color: #e1effc;
  font-weight: bold;
}

.react-tagsinput-tag a::before {
  content: " x";
  color: #638421;
}

.react-autosuggest__container {
  position: relative;
  display: inline;
}

.react-autosuggest__input {
  width: 240px;
  height: 30px;
  padding: 10px 20px;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 16px;
  border: 1px solid #aaa;
  border-radius: 4px;
}

.react-autosuggest__input:focus {
  outline: none;
}

.react-autosuggest__container--open .react-autosuggest__input {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.react-autosuggest__suggestions-container {
  position: relative;
  top: 18px;
  width: 102%;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: #fff;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 16px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  z-index: 2;
  max-height: 220px;
  overflow-y: auto;
  padding-top: 10px;
}

.fa-trash-icon {
  margin-left: 0.3rem;
}

.react-autosuggest__suggestion {
  cursor: pointer;
  padding: 10px 0;
}

.react-autosuggest__suggestion--focused {
  background-color: #ddd;
}

.chartjs-render-monitor {
  width: 850px !important;
  margin-bottom: 150px;
}

.fa-trash-icon {
  margin-left: 0.3rem;
}

.ql-container {
  border-bottom-left-radius: 0.5em;
  border-bottom-right-radius: 0.5em;
  background: #fefcfc;
}

/* Snow Theme */
.ql-snow.ql-toolbar {
  display: block;
  background: #eaecec;
  border-top-left-radius: 0.5em;
  border-top-right-radius: 0.5em;
}

/* Bubble Theme */
.ql-bubble .ql-editor {
  border: 1px solid #ccc;
  border-radius: 0.5em;
}

.ql-editor {
  min-height: 18em;
}

.themeSwitcher {
  margin-top: 0.5em;
  font-size: small;
}

.ql-snow .ql-picker.ql-font {
  margin-top: 10px;
}

.stats-charts-wrapper {
  overflow: scroll;
  height: 850px;
}

